# python-header-maker

./: .gitignore  AI_CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README-jp.md  README.md  README_TEMPLATE-jp.md  README_TEMPLATE.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  dev-charter-check.yml
docs/: architecture.md  file-map.md  specification.md  ui-design.md
examples/patterns/: service_pattern.py
src/header_maker/: cli.py  core.py
tests/: conftest.py
tests/unit/: test_placeholder.py
