[project]
name = "header-maker"
version = "0.1.0"
description = "GUI tool for creating note.com article header images"
authors = [{ name = "Yukihiro Marui" }]
requires-python = ">=3.11"
dependencies = [
    "pillow",
]

[project.scripts]
header-maker = "header_maker.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/header_maker"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
